# axon-lang

./: .dockerignore  .gitignore  CLA.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile.enterprise  LICENSE  MANIFEST.in  README.md  STRUCTURE.md  alembic.ini  diff_ast.txt  north-star.md  push-both.sh  push-smart.sh  pyproject.toml  pytest_out.txt  pytest_output.txt  pytest_val.txt  release_notes_enterprise_v1.29.0.md  release_notes_enterprise_v1.29.2.md  release_notes_enterprise_v1.29.4.md  release_notes_enterprise_v1.30.0.md  release_notes_enterprise_v1.31.0.md  release_notes_enterprise_v1.31.2.md  release_notes_enterprise_v1.31.3.md  release_notes_v1.38.1.md  release_notes_v1.38.2.md  release_notes_v1.38.4.md  release_notes_v1.38.5.md  release_notes_v1.40.0.md  release_notes_v1.40.1.md  release_notes_v2.1.0.md  temp_debug.txt  temp_full_test.txt  temp_test.txt  temp_test2.txt  temp_test3.txt  temp_test4.txt  temp_test5.txt  (+11 more)
axon-agora/: Cargo.toml  README.md
axon-agora/modules/agora/: facebook.axon  instagram.axon  linkedin.axon  tiktok.axon  types.axon
axon-agora/src/: connector.rs  facebook.rs  graph.rs  instagram.rs  lib.rs  linkedin.rs  oauth.rs  platform.rs  posture.rs  protocol.rs  quota.rs  scope.rs  tiktok.rs
axon-csys/: Cargo.toml  README.md  build.rs
axon-csys-enterprise/: .gitignore  Cargo.toml  LICENSE.bsl  README.md  build.rs
axon-csys-enterprise/benches/: audit_log.rs  evidence.rs  hmac.rs  phi_scrub.rs  sha256.rs
axon-csys-enterprise/c-src/audit/: log.c  log.h
axon-csys-enterprise/src/: audit_log.rs  crypto.rs  evidence.rs  lib.rs  license.rs  phi_scrub.rs  probe.rs  tokens.rs
axon-csys-enterprise/tests/: audit_log.rs  crypto.rs  drift_gate.rs  evidence.rs  license.rs  phi_scrub.rs  probe.rs  tokens.rs
axon-csys-enterprise/tools/: train_vertical_merges.py
axon-csys/benches/: audio.rs  base64.rs  bpe.rs  buffer.rs  effects.rs  hmac.rs  sha256.rs
axon-csys/c-src/audio/: audio.h  (+2 more)
axon-csys/src/: audio.rs  buffer.rs  crypto.rs  effects.rs  envelope.rs  lib.rs  probe.rs  tokens.rs
axon-csys/tests/: audio.rs  buffer.rs  crypto.rs  drift_gate.rs  effects.rs  probe.rs  tokens.rs
axon-csys/tools/: gen_merges.py
axon-frontend/: Cargo.toml  README.md
axon-frontend/src/: advertised.rs  ast.rs  channel_analysis.rs  checker.rs  compilation_cache.rs  cron.rs  ems.rs  epistemic.rs  epistemic_compat.rs  expr_diff.rs  ir_generator.rs  ir_nodes.rs  legal_basis.rs  lexer.rs  lib.rs  module_interface.rs  module_linker.rs  module_resolver.rs  multiparty.rs  ots_catalog.rs  parser.rs  primitive_registry.rs  refinement.rs  session.rs  smart_suggest.rs  store_column_proof.rs  store_introspect.rs  store_schema.rs  store_schema_manifest.rs  stream_effect.rs  technician.rs  tokens.rs  type_checker.rs  upstream_presets.rs  voice_desugar.rs
axon-frontend/tests/: fase100_document_ingestion.rs  fase105_deliver_grammar.rs  fase107_query_method.rs  fase108_dataspace_grammar.rs  fase109_grad_grammar.rs  fase110_notify_grammar.rs  fase111_e_stream_body.rs  fase111_retractions.rs  fase113_b_resource_laws.rs  fase114_b_provider_catalog.rs  fase114_c_tool_channel_grammar.rs  fase114_u_upstream_resource_grammar.rs  fase115_a_module_resolver.rs  fase115_b_interfaces.rs  fase115_c_epistemic_compat.rs  fase115_d_registry_typecheck.rs  fase115_e_link_faithful.rs  fase115_f_cache_laws.rs  fase116_laws_corpus.rs  fase28_drift_gate.rs  fase30_drift_gate.rs  fase30_parser_fuzz.rs  fase31_drift_gate.rs  fase31_implicit_fuzz.rs  fase31_warning.rs  fase32_l_stream_output_in_step.rs  fase33z_k_b_dialect_grammar.rs  fase33z_k_c_dialect_resolver.rs  fase36_d_axonendpoint_backend_field.rs  fase36_k_no_backend_warning.rs  fase36x_b_in_memory_store.rs  fase37_c_binding_totality.rs  fase37_g_totality_fuzz.rs  fase38_a_typed_store_diagnostic.rs  fase38_b_schema_drift_gate.rs  fase38_b_schema_grammar.rs  fase38_c_manifest_discovery.rs  fase38_i_integration.rs  fase38_i_property_fuzz.rs  fase41_fuzz.rs  (+73 more)
axon-rs/: .gitignore  Cargo.toml  Dockerfile  README.md
axon-rs/migrations/: 001_initial_schema.sql  002_indexes.sql  003_add_tenants.sql  004_add_tenant_id.sql  005_enable_rls.sql  006_add_tenant_quotas.sql
axon-rs/src/: advantage_witness.rs  agora_refresh.rs  agora_runtime.rs  anchor_checker.rs  api_keys.rs  ast.rs  audit_cli.rs  audit_trail.rs  auth_middleware.rs  auth_scope.rs  axon_server.rs  axonendpoint_replay.rs  backend.rs  backend_error.rs  backend_resolution.rs  cache_runtime.rs  cancel_token.rs  channel_semaphore.rs  checker.rs  circuit_breaker.rs  cli_fmt.rs  cli_parse.rs  cognitive_io_supervisor.rs  compiler.rs  config_persistence.rs  conversation.rs  cors.rs  cost_estimator.rs  credential_minter.rs  daemon.rs  dataspace_engine.rs  db_pool.rs  delivery.rs  deployer.rs  emcp.rs  enrichment.rs  epistemic.rs  epistemic_capture.rs  event_bus.rs  event_outbox.rs  (+108 more)
axon-rs/tests/: fase100_ingestion.rs  fase101_accuracy.rs  fase101_extraction.rs  fase108_dataspace_deploy.rs  fase109_grad_runtime.rs  fase111_c_warden_wired.rs  fase111_d_quant_wired.rs  fase111_e_stream_runs.rs  fase111_f_compute_real.rs  fase111_i_socket_served.rs  fase112_c_cognitive_io_deploy.rs  fase112_d_immune_fires.rs  fase112_e_reconcile_drift.rs  fase112_f_driver_walks_the_graph.rs  fase113_c_resource_is_a_wire.rs  fase113_d_lease_breach_fires.rs  fase114_a_budget_governs_the_canonical_path.rs  fase114_channel_shield_egress.rs  fase114_d_tool_channel_wire.rs  fase114_e_capacity_semaphore.rs  fase114_f_tool_lease_breach.rs  fase114_h_immune_watches_a_used_vendor.rs  fase114_scrape_concurrency.rs  fase114_sse_channel_governance.rs  fase114_u_upstream_instances_bounded.rs  fase114_w_on_breach_catalog.rs  fase115_g_cli_multifile.rs  fase116_a_agora_surface.rs  fase116_a_scope_coverage_pcc.rs  fase116_c_facebook.rs  fase116_d_instagram.rs  fase116_e_linkedin.rs  fase116_f_tiktok.rs  fase15_lambda_apply_parity.rs  fase17_let_binding_parity.rs  fase24_backends_cross.rs  fase30_keepalive.rs  fase30_negotiation.rs  fase30_sse_fuzz.rs  fase30_sse_runtime.rs  (+165 more)
src/axon-emcp/: Cargo.toml  PUBLISHING.md  README.md  server.json
(+1433 files in other folders)
