[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ──────────────────────────────────────────────────────────────────
# Project metadata
# ──────────────────────────────────────────────────────────────────
[project]
name = "axon-lang"
version = "1.6.0"
description = "AXON v1.5.1 — Lockstep cross-stack release. axon-lang Python + axon-lang Rust crate (renamed from axon-rs, now on crates.io) ship the same version every release, eliminating compatibility-matrix questions. Bumps coordinated via bump-my-version + a GitHub Actions workflow. Functional surface unchanged from v1.5.0: typed channels with pi-calculus mobility, second-order session types, runtime TypedEventBus, migration path from legacy string topics. See paper_mobile_channels.md."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Bemarking AI S.A.S." },
]
keywords = [
    "ai",
    "llm",
    "compiler",
    "programming-language",
    "cognitive-computing",
    "prompt-engineering",
    "ai-orchestration",
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Interpreters",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

# ──────────────────────────────────────────────────────────────────
# URLs
# ──────────────────────────────────────────────────────────────────
[project.urls]
Homepage = "https://github.com/bemarking/axon-constructor"
Repository = "https://github.com/bemarking/axon-constructor"
Issues = "https://github.com/bemarking/axon-constructor/issues"
Changelog = "https://github.com/bemarking/axon-constructor/blob/main/.axon-dev/CHANGELOG.md"

# ──────────────────────────────────────────────────────────────────
# CLI entrypoint
# ──────────────────────────────────────────────────────────────────
[project.scripts]
axon = "axon.cli:main"

# ──────────────────────────────────────────────────────────────────
# Optional dependencies — install what you need
#
#   pip install axon-lang              → compiler + runtime (zero deps)
#   pip install axon-lang[tools]       → real tool backends (httpx)
#   pip install axon-lang[anthropic]   → Claude backend
#   pip install axon-lang[openai]      → GPT backend
#   pip install axon-lang[gemini]      → Gemini backend
#   pip install axon-lang[ollama]      → Ollama backend
#   pip install axon-lang[kafka]       → Kafka event channel
#   pip install axon-lang[rabbitmq]    → RabbitMQ event channel
#   pip install axon-lang[aws]         → AWS EventBridge channel
#   pip install axon-lang[redis]       → Redis state backend
#   pip install axon-lang[server]      → AxonServer (HTTP + WS)
#   pip install axon-lang[all]         → everything
#   pip install axon-lang[dev]         → test + lint + build
# ──────────────────────────────────────────────────────────────────
[project.optional-dependencies]
tools = [
    "httpx>=0.27",
    "PyMuPDF>=1.24",
]
anthropic = [
    "anthropic>=0.40",
]
openai = [
    "openai>=1.50",
]
gemini = [
    "google-generativeai>=0.8",
]
ollama = [
    "ollama>=0.4",
]
kafka = [
    "aiokafka>=0.11",
]
rabbitmq = [
    "aio-pika>=9.4",
]
postgresql = [
    "asyncpg>=0.29",
]
sqlite-async = [
    "aiosqlite>=0.20",
]
aws = [
    "aiobotocore>=2.15",
    "boto3>=1.34",
    "botocore>=1.34",
]
docker = [
    "docker>=7.0",
]
kubernetes = [
    "kubernetes>=30.1",
]
redis = [
    "redis[hiredis]>=5.2",
]
# ── ESK Fase 6 optional crypto backends ───────────────────────────
pq = [
    # Post-Quantum signatures (ML-DSA-65 / Dilithium3, FIPS 204).
    # Requires liboqs (Open Quantum Safe) native library — see
    # https://github.com/open-quantum-safe/liboqs for build instructions.
    "liboqs-python>=0.10",
]
fhe = [
    # Homomorphic Encryption (CKKS) via Microsoft SEAL binding.
    "tenseal>=0.3",
]
vault = [
    # HashiCorp Vault secret provider.
    "hvac>=2.0",
]
keyvault = [
    # Azure Key Vault secret provider.
    "azure-keyvault-secrets>=4.7",
    "azure-identity>=1.15",
]
grpc = [
    # gRPC handler for the Free-Monad Handler protocol (Fase 2).
    "grpcio>=1.60",
    "grpcio-tools>=1.60",
]
server = [
    "uvicorn[standard]>=0.32",
    "starlette>=0.41",
    "httpx>=0.27",
]
all = [
    "axon-lang[tools]",
    "axon-lang[anthropic]",
    "axon-lang[openai]",
    "axon-lang[gemini]",
    "axon-lang[ollama]",
    "axon-lang[kafka]",
    "axon-lang[rabbitmq]",
    "axon-lang[postgresql]",
    "axon-lang[sqlite-async]",
    "axon-lang[aws]",
    "axon-lang[docker]",
    "axon-lang[kubernetes]",
    "axon-lang[redis]",
    "axon-lang[server]",
    "axon-lang[pq]",
    "axon-lang[fhe]",
    "axon-lang[vault]",
    "axon-lang[keyvault]",
    "axon-lang[grpc]",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "pytest-cov>=6.0",
    "numpy>=1.26",
    "ruff>=0.8",
    "build>=1.2",
    "pyinstaller>=6.13",
    "twine>=6.0",
    # Coordinated cross-stack version bumping. See [tool.bumpversion] block
    # below + .github/workflows/coordinated-release.yml — invoked as
    # `bump-my-version bump {patch|minor|major}` to atomically update
    # pyproject.toml + axon/__init__.py + axon-rs/Cargo.toml + the test
    # asserts that pin the version, then commit. Eliminates the drift that
    # previously had the version literal scattered across five Rust files
    # (now consolidated to a single env!("CARGO_PKG_VERSION") in runner.rs).
    "bump-my-version>=0.28",
]

# ──────────────────────────────────────────────────────────────────
# Hatch build config
# ──────────────────────────────────────────────────────────────────
[tool.hatch.build.targets.sdist]
include = [
    "axon/",
    "README.md",
    "LICENSE",
    ".env.example",
]
exclude = [
    "tests/",
    ".axon-dev/",
    "*.md",
    "!README.md",
]

[tool.hatch.build.targets.wheel]
packages = ["axon"]

# ──────────────────────────────────────────────────────────────────
# Pytest configuration
# ──────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests requiring API keys",
]

# ──────────────────────────────────────────────────────────────────
# Coverage
# ──────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["axon"]
omit = ["axon/cli/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "@abstractmethod",
]

# ──────────────────────────────────────────────────────────────────
# Ruff (linter + formatter)
# ──────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line length handled by formatter
    "B008",   # do not perform function calls in argument defaults
    "SIM108", # ternary operator — readability preference
]

[tool.ruff.lint.isort]
known-first-party = ["axon"]

# ──────────────────────────────────────────────────────────────────
# Coordinated cross-stack version bumping (bump-my-version).
#
# Single source of truth for "what version are we on" across the
# AXON ecosystem: Python package, Rust crate, AXON_VERSION constant
# (resolved via env!("CARGO_PKG_VERSION") in runner.rs), and the
# golden-file test asserts. One command bumps them all atomically:
#
#   bump-my-version bump patch    # 1.5.1 → 1.5.2
#   bump-my-version bump minor    # 1.5.1 → 1.6.0
#   bump-my-version bump major    # 1.5.1 → 2.0.0
#
# The companion GitHub Actions workflow
# .github/workflows/coordinated-release.yml wraps this with test
# verification + tag creation + dual-remote push, so a release is one
# `workflow_dispatch` invocation away.
# ──────────────────────────────────────────────────────────────────
[tool.bumpversion]
current_version = "1.6.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = false
sign_tags = false
allow_dirty = false
commit = true
message = "release(v{new_version}): coordinated cross-stack bump"
moveable_tags = []
commit_args = ""

# Python package version (pyproject.toml [project].version).
# Search/replace is targeted so the "v1.5.1" mentions inside the
# description prose are NOT clobbered — only the canonical
# `version = "X.Y.Z"` line.
[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

# Python __version__ exposed to users via `import axon; axon.__version__`.
[[tool.bumpversion.files]]
filename = "axon/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

# Rust crate version (axon-rs/Cargo.toml [package].version). The dep
# `axon-frontend = { path, version = "=0.2.0" }` deliberately uses a
# different version literal so it will NOT match this pattern.
[[tool.bumpversion.files]]
filename = "axon-rs/Cargo.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

# CLI smoke test that pins the printed version string.
[[tool.bumpversion.files]]
filename = "tests/test_cli_mvp_smoke.py"
search = 'axon-lang {current_version}'
replace = 'axon-lang {new_version}'

[[tool.bumpversion.files]]
filename = "tests/test_cli_mvp_smoke.py"
search = '"axon_version"] == "{current_version}"'
replace = '"axon_version"] == "{new_version}"'

# Frontend contract golden — the IR JSON _meta.axon_version field.
[[tool.bumpversion.files]]
filename = "tests/test_frontend_contract_golden.py"
search = 'meta["axon_version"] == "{current_version}"'
replace = 'meta["axon_version"] == "{new_version}"'
