[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
axon-enterprise = "axon_enterprise.cli:entrypoint"

# ──────────────────────────────────────────────────────────────────
# Project metadata
# ──────────────────────────────────────────────────────────────────
[project]
name = "axon-enterprise"
version = "1.5.0"
description = "Axon Enterprise — RBAC, SSO, Audit, Metering, Compliance (Fase 10); Replay Tokens + Cognitive State (Fase 11); Primitives endpoint (v1.2.1); v1.3.0 integrated axon-lang 1.5.1 + Rust TypedEventBus (Fase 13.f.2); v1.4.0 integrated axon-lang 1.7.0 closing 13.j/k/l (typed channels end-to-end); v1.5.0 integrates axon-lang 1.9.0 — Fase 14 lossless lexing complete: per-struct trivia in Rust AST (14.b), inner doc comments //! /*! (14.c), axon fmt MVP round-trip formatter (14.d), LSP channel hover enriched with doc paragraphs (14.f)."
readme = "README.md"
license = "LicenseRef-Proprietary"
requires-python = ">=3.12"
authors = [
    { name = "Ricardo Velit", email = "ricardo@bemarking.com.co" },
    { name = "Bemarking AI S.A.S." },
]
keywords = [
    "ai",
    "llm",
    "enterprise",
    "rbac",
    "sso",
    "audit",
    "metering",
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# ──────────────────────────────────────────────────────────────────
# Dependencies
# ──────────────────────────────────────────────────────────────────
dependencies = [
    # Core (from axon-lang)
    # v1.9.0 required for Fase 14.b/c/d/f — lossless lexing capability
    # surface, all surface-additive:
    #   - 14.b Per-struct trivia in Rust AST (Declaration variants):
    #     adopters consuming axon-frontend as a library can read
    #     leading_trivia / trailing_trivia directly off FlowDefinition,
    #     ChannelDefinition, etc., reaching parity with Python's AST
    #     shape from 14.a.
    #   - 14.c Inner doc comments (`//!` / `/*! */`): module/file-level
    #     documentation following the Rust convention; .axon files in
    #     the platform's customer modules can now declare a file
    #     preamble independently of the next declaration's outer doc.
    #   - 14.d `axon fmt` MVP: token-level round-trip formatter
    #     (preserves every comment kind verbatim) + CLI subcommand with
    #     `--check` (CI gate, source untouched) and `--write` (in-place
    #     rewrite). Layout canonicalisation deferred to a future phase.
    #   - 14.f LSP channel hover enriched with outer doc comments
    #     rendered as a Markdown paragraph; inner doc and regular
    #     comments deliberately excluded so per-channel hover stays
    #     accurate.
    # Pre-14 lexer pin (>=1.7.0 from v1.4.0) bumped to >=1.9.0 to make
    # the new lexer surface available to platform tooling.
    # IR JSON byte-identical vs v1.4.0 — trivia is an AST-only concern
    # and never serialised, so no migration is required for existing
    # tenants and the runtime contract stays intact.
    "axon-lang>=1.9.0",

    # Database & ORM
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",
    "greenlet>=3.0",              # required by SQLAlchemy asyncio
    "alembic>=1.13",
    "psycopg[binary]>=3.2",       # sync driver for Alembic migration runner only

    # Authentication & SSO
    "python3-saml>=1.16.0",
    "authlib>=1.3.0",

    # Cryptography + auth
    "cryptography>=42.0.0",
    "PyJWT>=2.8.0",
    "argon2-cffi>=23.1",          # Argon2id password hashing
    "pyotp>=2.9",                  # RFC 6238 TOTP
    "zxcvbn>=4.4",                 # password strength scoring
    "httpx>=0.27",                 # HIBP k-anonymity lookups (async)

    # Observability
    "prometheus-client>=0.20.0",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-instrumentation-sqlalchemy>=0.48b0",
    "opentelemetry-instrumentation-asyncpg>=0.48b0",
    "structlog>=24.1",

    # Web framework (already in axon-lang)
    "starlette>=0.41",
    "uvicorn[standard]>=0.32",

    # CLI
    "typer>=0.12",

    # Utilities
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
]

# ──────────────────────────────────────────────────────────────────
# Optional dependencies
# ──────────────────────────────────────────────────────────────────
[project.optional-dependencies]
# AWS integrations
aws = [
    "boto3>=1.34",
]

# GCP integrations
gcp = [
    "google-cloud-storage>=2.14",
    "google-cloud-kms>=2.19",
]

# Datadog monitoring
datadog = [
    "datadog>=0.49.0",
]

# Stripe billing integration
stripe = [
    "stripe>=9.0.0",
]

# Development & testing
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "pytest-mock>=3.14",
    "testcontainers[postgres]>=4.7",   # ephemeral Postgres for integration tests
    "anyio>=4.3",                      # async test utilities
    "httpx>=0.27",                     # async HTTP client for API tests
    "ruff>=0.8",
    "black>=24.1",
    "mypy>=1.8",
    "types-python-dateutil",
]

all = [
    "axon-enterprise[aws,gcp,datadog,stripe,dev]",
]

# ──────────────────────────────────────────────────────────────────
# Pytest configuration
# ──────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
    "security: marks security-related tests",
]

# ──────────────────────────────────────────────────────────────────
# Ruff (linter + formatter)
# ──────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
    "S",    # flake8-bandit (security)
]
ignore = [
    "E501",   # line length handled by formatter
    "B008",   # do not perform function calls in argument defaults
    "S101",   # use of assert allowed in tests
]

[tool.ruff.lint.isort]
known-first-party = ["axon_enterprise"]
