[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ──────────────────────────────────────────────────────────────────
# Project metadata
# ──────────────────────────────────────────────────────────────────
[project]
name = "axon-lang"
version = "2.1.0"
description = "AXON — the formal cognitive language. Native Rust + C23 runtime (v2.0.0 Pure Silicon Cognition). This PyPI package is a thin launcher that fetches + execs the precompiled native `axon` binary; the lexer, parser, type-checker, IR generator, runtime, server, and CLI are all native Rust + C23. `pip install axon-lang && axon check x.axon` works exactly like the native binary. Alternatives: `cargo install axon-lang`, GitHub Release binaries, or the axon-enterprise Docker image."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Bemarking AI S.A.S." },
]
keywords = [
    "ai",
    "llm",
    "compiler",
    "programming-language",
    "cognitive-computing",
    "prompt-engineering",
    "ai-orchestration",
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Interpreters",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

# ──────────────────────────────────────────────────────────────────
# URLs
# ──────────────────────────────────────────────────────────────────
[project.urls]
Homepage = "https://github.com/bemarking/axon-constructor"
Repository = "https://github.com/bemarking/axon-constructor"
Issues = "https://github.com/bemarking/axon-constructor/issues"
Changelog = "https://github.com/bemarking/axon-constructor/blob/main/.axon-dev/CHANGELOG.md"

# ──────────────────────────────────────────────────────────────────
# CLI entrypoint — §Fase 39.h
#
# Points at the native-binary launcher (`axon/_bootstrap.py` via the
# `axon:main` re-export). `pip install axon-lang` + `axon ...` fetches
# and execs the precompiled Rust binary. There is NO Python language
# runtime behind this entry point anymore.
# ──────────────────────────────────────────────────────────────────
[project.scripts]
axon = "axon:main"

# ──────────────────────────────────────────────────────────────────
# Optional dependencies — §Fase 39.h
#
# The v1.x runtime extras (anthropic / openai / kafka / postgresql /
# server / pq / fhe / …) are GONE: the language runtime is native
# Rust + C23, so there are no Python runtime dependencies to install.
# The native binary bundles every backend + transport + crypto path.
#
# The ONLY surviving extra is `dev`, needed for:
#   - the 2 Cat 3 subprocess tests (pytest) that anchor the public
#     CLI contract against the native binary
#   - cross-stack version coordination (bump-my-version)
#
#   pip install axon-lang        → native binary launcher (zero runtime deps)
#   pip install axon-lang[dev]   → + pytest + bump-my-version
# ──────────────────────────────────────────────────────────────────
[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
    "build>=1.2",
    "twine>=6.0",
    # Coordinated cross-stack version bumping. See [tool.bumpversion]
    # block below + .github/workflows/coordinated-release.yml —
    # invoked as `bump-my-version bump {patch|minor|major}` to
    # atomically update pyproject.toml + axon/__init__.py +
    # axon/_bootstrap.py + axon-rs/Cargo.toml + the test asserts that
    # pin the version, then commit.
    "bump-my-version>=0.28",
]

# ──────────────────────────────────────────────────────────────────
# Hatch build config
# ──────────────────────────────────────────────────────────────────
[tool.hatch.build.targets.sdist]
include = [
    "axon/",
    "README.md",
    "LICENSE",
    ".env.example",
]
exclude = [
    "tests/",
    ".axon-dev/",
    "*.md",
    "!README.md",
]

[tool.hatch.build.targets.wheel]
packages = ["axon"]

# ──────────────────────────────────────────────────────────────────
# Pytest configuration
# ──────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests requiring API keys",
]

# ──────────────────────────────────────────────────────────────────
# Coverage
# ──────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["axon"]
# §Fase 39.h — only the distribution shim remains; nothing to omit.
omit = []

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "@abstractmethod",
]

# ──────────────────────────────────────────────────────────────────
# Ruff (linter + formatter)
# ──────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line length handled by formatter
    "B008",   # do not perform function calls in argument defaults
    "SIM108", # ternary operator — readability preference
]

[tool.ruff.lint.isort]
known-first-party = ["axon"]

# ──────────────────────────────────────────────────────────────────
# Coordinated cross-stack version bumping (bump-my-version).
#
# Single source of truth for "what version are we on" across the
# AXON ecosystem: Python package, Rust crate, AXON_VERSION constant
# (resolved via env!("CARGO_PKG_VERSION") in runner.rs), and the
# golden-file test asserts. One command bumps them all atomically:
#
#   bump-my-version bump patch    # 1.5.1 → 1.5.2
#   bump-my-version bump minor    # 1.5.1 → 1.6.0
#   bump-my-version bump major    # 1.5.1 → 2.0.0
#
# The companion GitHub Actions workflow
# .github/workflows/coordinated-release.yml wraps this with test
# verification + tag creation + dual-remote push, so a release is one
# `workflow_dispatch` invocation away.
# ──────────────────────────────────────────────────────────────────
[tool.bumpversion]
current_version = "2.1.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = false
sign_tags = false
allow_dirty = false
commit = true
message = "release(v{new_version}): coordinated cross-stack bump"
moveable_tags = []
commit_args = ""

# Python package version (pyproject.toml [project].version).
# Search/replace is targeted so the "v1.5.1" mentions inside the
# description prose are NOT clobbered — only the canonical
# `version = "X.Y.Z"` line.
[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

# Python __version__ exposed to users via `import axon; axon.__version__`.
[[tool.bumpversion.files]]
filename = "axon/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

# §Fase 39.h — the native-binary launcher's `_VERSION` constant
# determines which GitHub Release tarball `pip install` fetches; it
# MUST bump in lockstep with the package version.
[[tool.bumpversion.files]]
filename = "axon/_bootstrap.py"
search = '_VERSION = "{current_version}"'
replace = '_VERSION = "{new_version}"'

# Rust crate version (axon-rs/Cargo.toml [package].version). The dep
# `axon-frontend = { path, version = "=0.2.0" }` deliberately uses a
# different version literal so it will NOT match this pattern.
[[tool.bumpversion.files]]
filename = "axon-rs/Cargo.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

# CLI smoke test that pins the printed version string.
[[tool.bumpversion.files]]
filename = "tests/test_cli_mvp_smoke.py"
search = 'axon-lang {current_version}'
replace = 'axon-lang {new_version}'

[[tool.bumpversion.files]]
filename = "tests/test_cli_mvp_smoke.py"
search = '"axon_version"] == "{current_version}"'
replace = '"axon_version"] == "{new_version}"'

# Frontend contract golden — the IR JSON _meta.axon_version field.
[[tool.bumpversion.files]]
filename = "tests/test_frontend_contract_golden.py"
search = 'meta["axon_version"] == "{current_version}"'
replace = 'meta["axon_version"] == "{new_version}"'
