[package]
name = "axon-agora"
version = "0.1.0"
edition = "2021"
rust-version = "1.95"
authors = ["AXON Project", "Bemarking AI S.A.S."]
description = "The first official library of axon-lang: governed native connectors for LinkedIn, Facebook Pages, Instagram, and TikTok. OSS protocol layer (§Fase 116) — capability×scope matrix, session-typed publishing protocols, owned-only posture refusals, and consumable posting quotas. Founded on docs/papers/paper_axon_agora.md."
license = "AGPL-3.0-or-later"
repository = "https://github.com/Bemarking/axon-lang"
readme = "README.md"
keywords = ["axon", "agent", "social", "connector", "governance"]
categories = ["api-bindings", "web-programming"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ─── target/ bloat control (disk hygiene, same as axon-frontend/axon-rs) ───
[profile.dev]
debug = 1

[profile.dev.package."*"]
debug = 0
