[package]
name = "axon-frontend"
version = "1.2.0"
edition = "2021"
rust-version = "1.95"
authors = ["AXON Project", "Bemarking AI S.A.S."]
description = "AXON compiler frontend — lexer, parser, AST, epistemic type system, type checker, IR generator. Zero runtime dependencies. v1.2.0 adds PRIMITIVE_REGISTRY — closed catalogue of every named language construct (45 entries) with PrimitiveInfo / DocStatus / CoverageSummary types + find / by_category / with_status / coverage_summary helpers. Single source of truth for downstream tooling (axon-emcp coverage gate, future LSP completions, docs-site generators). v1.1.0 introduced session-types + multiparty projection. v1.0.x earlier cycles — see https://github.com/Bemarking/axon-lang."
license = "MIT"
repository = "https://github.com/Bemarking/axon-lang"
readme = "README.md"
keywords = ["axon", "compiler", "parser", "ast", "type-checker"]
categories = ["compilers", "development-tools"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
