[package]
name = "axon-frontend"
version = "1.54.0"
edition = "2021"
rust-version = "1.95"
authors = ["AXON Project", "Bemarking AI S.A.S."]
description = "AXON compiler frontend — lexer, parser, AST, epistemic type system, type checker, IR generator. Zero runtime dependencies. v1.3.0 lowers requires_capabilities into IRAxonEndpoint (the PCC capability-containment property, §Fase 51.x.1). v1.2.0 added PRIMITIVE_REGISTRY — closed catalogue of every named language construct (45 entries) with PrimitiveInfo / DocStatus / CoverageSummary types + helpers. v1.1.0 introduced session-types + multiparty projection. See https://github.com/Bemarking/axon-lang."
license = "AGPL-3.0-or-later"
repository = "https://github.com/Bemarking/axon-lang"
readme = "README.md"
keywords = ["axon", "compiler", "parser", "ast", "type-checker"]
categories = ["compilers", "development-tools"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ─── target/ bloat control (disk hygiene, same as axon-rs) ───────────
# debug=1 (line-tables) for our code; strip debug info from third-party deps.
# Profiles apply only to the build ROOT → ignored by downstream consumers.
[profile.dev]
debug = 1

[profile.dev.package."*"]
debug = 0
